[package]
name = "signal-macro"
version = "0.1.0"
authors = ["Guillaume Riou <guiloua2@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-quote = "0.2.2"
proc-macro2 = "0.4"
syn = { version = "0.15.7", features = ["full", "fold", "parsing"] }

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"