[package]
name = "tests"
version = "0.1.0"
authors = ["Guillaume Riou <guiloua2@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
signal-macro = { path = "../signal-macro" }

[dependencies.audio-engine]
path = "../audio-engine"
features = ["more-stuff"]
